--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,11 +12,13 @@
         "eamodio.gitlens",
         "ms-python.autopep8",
         "ms-python.debugpy",
+        "ms-python.flake8",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "njpwerner.autodocstring",
         "spmeesseman.vscode-taskexplorer",
-        "tamasfe.even-better-toml"
+        "tamasfe.even-better-toml",
+        "ms-python.isort"
       ]
     }
   },
