--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,9 +4,12 @@
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
     "ms-python.autopep8",
+    "ms-python.flake8",
     "ms-python.python",
     "ms-python.vscode-pylance",
     "njpwerner.autodocstring",
-    "tamasfe.even-better-toml"
+    "tamasfe.even-better-toml",
+    "ms-python.isort",
+    "joshbolduc.commitlint"
   ]
 }
