chore(vscode): add python settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
   "[python]": {
     "editor.defaultFormatter": "ms-python.autopep8"
   },
-  "python.analysis.typeCheckingMode": "basic"
+  "python.analysis.typeCheckingMode": "strict",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "python.analysis.autoImportCompletions": true,
+  "python.analysis.autoFormatStrings": true,
+  "python.analysis.completeFunctionParens": true,
+  "python.createEnvironment.trigger": "prompt",
+  "python.missingPackage.severity": "Warning",
+  "python.terminal.activateEnvInCurrentTerminal": true
 }
