--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,12 +10,13 @@
         "ms-python.autopep8",
         "ms-python.debugpy",
         "ms-python.flake8",
+        "ms-python.isort",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "njpwerner.autodocstring",
+        "redhat.vscode-yaml",
         "spmeesseman.vscode-taskexplorer",
-        "tamasfe.even-better-toml",
-        "ms-python.isort"
+        "tamasfe.even-better-toml"
       ]
     }
   },
