--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,13 +3,16 @@
     "charliermarsh.ruff",
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
+    "joshbolduc.commitlint",
+    "ms-pyright.pyright",
     "ms-python.autopep8",
     "ms-python.flake8",
+    "ms-python.isort",
     "ms-python.python",
     "ms-python.vscode-pylance",
     "njpwerner.autodocstring",
-    "tamasfe.even-better-toml",
-    "ms-python.isort",
-    "joshbolduc.commitlint"
+    "redhat.vscode-yaml",
+    "streetsidesoftware.code-spell-checker",
+    "tamasfe.even-better-toml"
   ]
 }
