--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,4 @@
 {
-  "name": "Python 3",
-  "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
   "customizations": {
     "vscode": {
       "extensions": [
@@ -21,9 +19,16 @@
     }
   },
   "features": {
+    "ghcr.io/devcontainers-contrib/features/flake8": {},
+    "ghcr.io/devcontainers-contrib/features/isort": {},
+    "ghcr.io/devcontainers-contrib/features/mypy": {},
     "ghcr.io/devcontainers-contrib/features/npm-package": {
       "package": "mega-linter-runner"
     },
+    "ghcr.io/devcontainers-contrib/features/pdm": {},
+    "ghcr.io/devcontainers-contrib/features/ruff": {},
     "ghcr.io/devcontainers/features/docker-in-docker": {}
-  }
+  },
+  "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
+  "name": "Python 3"
 }
