--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,6 @@ easygui = "^0.98.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+exclude = ["platform_scroller.py"]
