--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
     "joshbolduc.commitlint",
+    "michaelcurrin.auto-commit-msg",
     "ms-python.autopep8",
     "ms-python.flake8",
     "ms-python.isort",
