--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,16 +19,13 @@
     }
   },
   "features": {
-    "ghcr.io/devcontainers-contrib/features/flake8": {},
-    "ghcr.io/devcontainers-contrib/features/isort": {},
-    "ghcr.io/devcontainers-contrib/features/mypy": {},
     "ghcr.io/devcontainers-contrib/features/npm-package": {
       "package": "mega-linter-runner"
     },
     "ghcr.io/devcontainers-contrib/features/poetry": {},
-    "ghcr.io/devcontainers-contrib/features/ruff": {},
     "ghcr.io/devcontainers/features/docker-in-docker": {}
   },
   "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
-  "name": "Python 3"
+  "name": "Python 3",
+  "postAttachCommand": "poetry install"
 }
