--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,18 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.8.10"
 pygame = "^2.5.2"
 easygui = "^0.98.3"
 openpyxl = "^3.1.2"
 xlrd = "^2.0.1"
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.8.0"
+ruff = "^0.3.0"
+autopep8 = "^2.0.4"
+flake8 = "^7.0.0"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
