--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "Python-Code-Dump"
 version = "0.0.0"
 description = "A collection of Python code snippets and scripts"
-dependencies = ["pygame", "easygui", "openpyxl", "xlrd"]
+dependencies = ["pygame", "easygui", "openpyxl", "xlrd", "pyopengl"]
 
 [tool.poetry]
 name = "python-code-dump"
@@ -19,6 +19,7 @@ pygame = "^2.5.2"
 easygui = "^0.98.3"
 openpyxl = "^3.1.2"
 xlrd = "^2.0.1"
+pyopengl = "^3.1.7"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
