chore(vscode): update extension recommendations

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,7 @@
         "ms-python.debugpy",
         "ms-python.flake8",
         "ms-python.isort",
+        "ms-python.mypy-type-checker",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "njpwerner.autodocstring",
