--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ ruff = "^0.3.0"
 autopep8 = "^2.0.4"
 flake8 = "^7.0.0"
 isort = "^5.13.2"
+types-openpyxl = "^3.1.0.20240301"
 
 [build-system]
 requires = ["poetry-core"]
