--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ python = ">=3.8.10"
 pygame = "^2.5.2"
 easygui = "^0.98.3"
 openpyxl = "^3.1.2"
-xlrd = "^2.0.1"
 pyopengl = "^3.1.7"
 
 [tool.poetry.group.dev.dependencies]
@@ -28,6 +27,7 @@ autopep8 = "^2.0.4"
 flake8 = "^7.0.0"
 isort = "^5.13.2"
 types-openpyxl = "^3.1.0.20240301"
+cython = "^3.0.9"
 
 [build-system]
 requires = ["poetry-core"]
