--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -37,6 +37,17 @@ PRE_COMMANDS:
   - continue_if_failed: false
     cwd: workspace
     command: pip install -r requirements.txt
-  # - continue_if_failed: false
-  #   cwd: workspace
-  #   command: poetry install --group dev
+PYTHON_PYLINT_PRE_COMMANDS:
+  - continue_if_failed: false
+    cwd: workspace
+    command: apk update && apk add sdl2-dev py3-pygame freetype-dev
+  - continue_if_failed: false
+    cwd: workspace
+    command: pip install -r requirements.txt
+PYTHON_PYRIGHT_PRE_COMMANDS:
+  - continue_if_failed: false
+    cwd: workspace
+    command: apk update && apk add sdl2-dev py3-pygame freetype-dev
+  - continue_if_failed: false
+    cwd: workspace
+    command: pip install -r requirements.txt
