--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,19 +6,19 @@
         "donjayamanne.python-environment-manager",
         "eamodio.gitlens",
         "esbenp.prettier-vscode",
-        "MichaelCurrin.auto-commit-msg",
+        "joshbolduc.commitlint",
+        "michaelcurrin.auto-commit-msg",
         "ms-python.autopep8",
         "ms-python.debugpy",
         "ms-python.flake8",
-        "ms-python.isort",
-        "ms-python.mypy-type-checker",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "njpwerner.autodocstring",
         "redhat.vscode-yaml",
         "spmeesseman.vscode-taskexplorer",
         "streetsidesoftware.code-spell-checker",
-        "tamasfe.even-better-toml"
+        "tamasfe.even-better-toml",
+        "trunk.io"
       ]
     }
   },
@@ -27,7 +27,8 @@
       "package": "mega-linter-runner"
     },
     "ghcr.io/devcontainers-contrib/features/poetry": {},
-    "ghcr.io/devcontainers/features/docker-in-docker": {}
+    "ghcr.io/devcontainers/features/docker-in-docker": {},
+    "ghcr.io/trunk-io/devcontainer-feature/trunk": {}
   },
   "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
   "name": "Python 3",
