--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,19 +1,21 @@
 {
   "recommendations": [
     "charliermarsh.ruff",
+    "donjayamanne.python-environment-manager",
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
     "joshbolduc.commitlint",
     "michaelcurrin.auto-commit-msg",
     "ms-python.autopep8",
+    "ms-python.debugpy",
     "ms-python.flake8",
-    "ms-python.isort",
-    "ms-python.mypy-type-checker",
     "ms-python.python",
     "ms-python.vscode-pylance",
     "njpwerner.autodocstring",
     "redhat.vscode-yaml",
+    "spmeesseman.vscode-taskexplorer",
     "streetsidesoftware.code-spell-checker",
-    "tamasfe.even-better-toml"
+    "tamasfe.even-better-toml",
+    "trunk.io"
   ]
 }
