--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -16,10 +16,11 @@ runtimes:
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
+  disabled:
+    - black
   enabled:
     - actionlint@1.6.27
     - bandit@1.7.7
-    - black@24.2.0
     - checkov@3.2.32
     - git-diff-check
     - isort@5.13.2
