--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,14 +2,13 @@
   "customizations": {
     "vscode": {
       "extensions": [
+        "charliermarsh.ruff",
         "donjayamanne.python-environment-manager",
         "eamodio.gitlens",
         "esbenp.prettier-vscode",
         "joshbolduc.commitlint",
         "michaelcurrin.auto-commit-msg",
-        "ms-python.autopep8",
         "ms-python.debugpy",
-        "ms-python.flake8",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "njpwerner.autodocstring",
@@ -25,14 +24,15 @@
     "ghcr.io/devcontainers-contrib/features/npm-package": {
       "package": "mega-linter-runner"
     },
-    "ghcr.io/devcontainers-contrib/features/poetry": {},
+    "ghcr.io/devcontainers-contrib/features/ruff": {},
     "ghcr.io/devcontainers/features/docker-in-docker": {},
+    "ghcr.io/schlich/devcontainer-features/rye": {},
     "ghcr.io/trunk-io/devcontainer-feature/trunk": {}
   },
   "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
   "name": "Python 3",
   "postCreateCommand": {
     "npm dependencies": "npm i -g commitlint",
-    "python dependencies": "poetry install"
+    "python dependencies": "rye install"
   }
 }
