--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,16 @@ readme = "README.md"
 requires-python = ">=3.8"
 
 [build-system]
-requires = ["hatchling"]
 build-backend = "hatchling.build"
+requires = ["hatchling"]
 
 [tool.rye]
-managed = true
 dev-dependencies = [
   "mypy>=1.9.0",
   "ruff>=0.3.3",
   "types-openpyxl>=3.1.0.20240311",
 ]
+managed = true
 
 [tool.hatch.metadata]
 allow-direct-references = true
@@ -60,21 +60,11 @@ respect-gitignore = true
 [tool.ruff.format]
 # Enable reformatting of code snippets in docstrings.
 docstring-code-format = true
-line-ending = "lf"
-indent-style = "space"
 docstring-code-line-length = "dynamic"
+indent-style = "space"
+line-ending = "lf"
 quote-style = "double"
 
 [tool.ruff.lint]
-# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
-# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
-# McCabe complexity (`C901`) by default.
-select = ["E4", "E7", "E9", "F"]
-ignore = []
-
-# Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
-unfixable = []
-
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+select = ["ALL"]
