chore(vscode): add extension recommendation

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "adam-bender.commit-message-editor",
     "charliermarsh.ruff",
     "donjayamanne.python-environment-manager",
     "eamodio.gitlens",
