chore(ruff): ignore rule

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,4 +68,4 @@ quote-style = "double"
 [tool.ruff.lint]
 fixable = ["ALL"]
 select = ["ALL"]
-ignore = ["T201", "INP001"]
+ignore = ["T201", "INP001", "ANN102"]
