--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,8 +31,8 @@
   },
   "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
   "name": "Python 3",
-  "postCreateCommand": {
+  "onCreateCommand": {
     "npm dependencies": "npm i -g commitlint",
-    "python dependencies": "rye install"
+    "python dependencies": "rye sync"
   }
 }
