--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,4 +68,13 @@ quote-style = "double"
 [tool.ruff.lint]
 fixable = ["ALL"]
 select = ["ALL"]
-ignore = ["T201", "INP001", "ANN102", "ANN101"]
+ignore = [
+  "ANN101",
+  "ANN102",
+  "COM812",
+  "D203",
+  "D213",
+  "INP001",
+  "ISC001",
+  "T201",
+]
