--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -19,20 +19,21 @@ lint:
   disabled:
     - black
     - bandit
+    - ruff
   enabled:
     - actionlint@1.6.27
-    - checkov@3.2.64
+    - checkov@3.2.66
     - git-diff-check
     - isort@5.13.2
     - markdownlint@0.39.0
     - mypy@1.9.0
     - osv-scanner@1.7.0
     - prettier@3.2.5
-    - ruff@0.3.7
     - taplo@0.8.1
     - trivy@0.50.1
     - trufflehog@3.71.0
     - yamllint@1.35.1
+
 actions:
   enabled:
     - trunk-announce
